added admin user for administration of the app